--- a/toplist/stopcispa/cispa-index.html
+++ b/toplist/stopcispa/cispa-index.html
@@ -1,27 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+"http://www.w3.org/TR/html4/loose.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<meta charset="utf-8" />
-
-		<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
-		Remove this if you use the .htaccess -->
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-
-		<title>STOP CISPA</title>
-		<meta name="description" content="" />
-		<meta name="author" content="Black Dog Systems BDSYS.net | Andrew Lass" />
 		<link type"text/css" rel="stylesheet" href="stopcispa.css"/>
-		<script type="text/javascript" src="stopcispa.js"></script>
     	<script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script> <!-- Calls Jquery library from teh netz  You may want to host this server side after dev work:)--> 
     	<script type="text/javascript" src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script> <!-- This too ^.^ -->
-    	<!-- <script type="text/javascript" src="collector-main.js"></script> -->
+    	<script type="text/javascript" src="stopcispa.js"></script>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<title>STOP CISPA</title>
 
-		<meta name="viewport" content="width=device-width; initial-scale=1.0" />
-
-		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
-		<link rel="shortcut icon" href="/favicon.ico" />
-		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 	</head>
 
 	<body>
@@ -46,20 +33,26 @@
 					<a href="http://dev.bdsys.net/stopcispa">Place this on YOUR website!</a>
 				</p>
 				<p>
-					<a href="<a href="mailto:admin@bdsys.net.com?subject=feedback>Contact</a>
+					<a href="mailto:admin@bdsys.net?Subject=Stop%20Cispa!"> Contact </a>
+				</p>
+				
+				<p id="learnToSwim">
+					Learn to Swim
 				</p>
 			</nav>
 			
 			<div class="whyDiv">
 					<h2>Why Is this site blacked out?</h2>
-					<P>This site has been blacked out in protest of <a href="http://en.wikipedia.org/wiki/Cyber_Intelligence_Sharing_and_Protection_Act">The CISPA Bill</a>.
-						 We, as united people of The Internet, must stop this bill in the United States Senate. Please see the link on the left of this page to take action and educate yourself (so that you may also educate others).</P>
+					<P>This site has been blacked out in protest of 
+						<a id="wordLink" href="http://en.wikipedia.org/wiki/Cyber_Intelligence_Sharing_and_Protection_Act">The CISPA Bill</a>
+						 We, as united people of The Internet, must stop this bill in the United States Senate. Please see the link on the left
+						  of this page to take action and educate yourself (so that you may also educate others). </P>
 					
 			</div>
+		<!--	<div class="whyFiller"></div> -->
 
 			<div class="toolDiv">
-					<p id="learnToSwim">Learn to Swim</p>
-					<iframe width="200" height="200" src="http://www.youtube.com/embed/uCEeAn6_QJo?rel=0" frameborder="0" allowfullscreen></iframe>
+					<iframe id="youtubeVid" width="250" height="250" src="http://www.youtube.com/embed/uCEeAn6_QJo?rel=0" frameborder="0" allowfullscreen></iframe>
 			</div>
 
 			<footer>
